# libawl

./: .clang-tidy  CMakeLists.txt  awl-config.cmake.in  awl_base_files.txt  config.hpp.in
CMakeModules/: FindWayland.cmake
backends/linux/: files.txt
backends/posix/: files.txt
backends/sdl/: files.txt
backends/wayland/: files.txt
backends/windows/: files.txt
backends/x11/: files.txt
cmake/: awl-config.cmake.in  config.hpp.in
cmake/modules/public/: AwlMainGenerator.cmake  FindWayland.cmake  main_prototype.cpp.in
examples/: CMakeLists.txt  main.cpp  resize.cpp  show.cpp  timer.cpp  xim.cpp
include/awl/: class_symbol.hpp  create_log.hpp  exception.hpp  log.hpp  log_context.hpp  log_location.hpp  show_error.hpp  show_error_narrow.hpp  show_message.hpp  show_message_narrow.hpp
include/awl/backends/posix/: callback.hpp  create_processor.hpp  duration.hpp  event.hpp  event_container.hpp  event_fwd.hpp  event_unique_ptr.hpp  extract_event.hpp  fd.hpp  function.hpp  match.hpp  optional_duration.hpp  optional_duration_fwd.hpp  posted.hpp  posted_fwd.hpp  posted_unique_ptr.hpp  processor.hpp  processor_base.hpp  processor_base_fwd.hpp  processor_fwd.hpp  processor_ref.hpp  processor_unique_ptr.hpp  timer.hpp  timer_delay.hpp  timer_fwd.hpp  timer_period.hpp  timer_unique_ptr.hpp
include/awl/backends/sdl/: exception.hpp  get_error.hpp
include/awl/backends/wayland/: compositor.hpp  compositor_fwd.hpp  display.hpp  (+44 more)
include/awl/cursor/: const_optional_object_ref.hpp  const_optional_object_ref_fwd.hpp  create_invisible.hpp  create_predefined.hpp  hotspot.hpp  hotspot_fwd.hpp  object.hpp  object_fwd.hpp  object_unique_ptr.hpp  optional_type.hpp  optional_type_fwd.hpp  size.hpp  type.hpp  type_fwd.hpp
include/awl/detail/: class_symbol.hpp  export_class_instantiation.hpp
include/awl/event/: base.hpp  base_fwd.hpp  base_unique_ptr.hpp  concrete_connection.hpp  concrete_connection_fwd.hpp  connection.hpp  connection_function.hpp  connection_fwd.hpp  connection_unique_ptr.hpp  container.hpp  container_reference.hpp  create_processor.hpp  make_connection.hpp  map_concat.hpp  optional_base_unique_ptr.hpp  optional_base_unique_ptr_fwd.hpp  processor.hpp  processor_unique_ptr.hpp  scoped_window_processor.hpp  variant.hpp  variant_fwd.hpp
include/awl/main/: create_output.hpp  dummy_output.hpp  exit_code.hpp  exit_code_fwd.hpp  exit_failure.hpp  exit_success.hpp  function_context.hpp  function_context_fwd.hpp  loop.hpp  loop_callback.hpp  loop_function.hpp  loop_next.hpp  loop_poll.hpp  loop_process_callback.hpp  optional_exit_code.hpp  optional_exit_code_fwd.hpp  optional_scoped_output_unique_ptr.hpp  optional_scoped_output_unique_ptr_fwd.hpp  output.hpp  output_fwd.hpp  output_unique_ptr.hpp  scoped_output.hpp  scoped_output_fwd.hpp  scoped_output_unique_ptr.hpp
include/awl/stream/: cell_decl.hpp  cell_fwd.hpp  cell_impl.hpp  empty.hpp  empty_fwd.hpp  lazy_function_decl.hpp  lazy_function_fwd.hpp  lazy_function_impl.hpp  object_decl.hpp  object_fwd.hpp  object_impl.hpp
include/awl/system/: create.hpp  object.hpp  object_fwd.hpp  object_ref.hpp  object_unique_ptr.hpp  optional_exit_code.hpp  optional_exit_code_fwd.hpp  reference.hpp
include/awl/timer/: const_reference.hpp  delay.hpp  duration.hpp  event.hpp  event_fwd.hpp  match.hpp  object.hpp  object_fwd.hpp  period.hpp  reference.hpp  setting.hpp  setting_fwd.hpp  setting_no_delay.hpp  setting_no_period.hpp  unique_ptr.hpp
include/awl/visual/: object.hpp  object_fwd.hpp  object_unique_ptr.hpp
include/awl/window/: dim.hpp  dim_fwd.hpp  has_focus.hpp  object.hpp  object_fwd.hpp  object_ref.hpp  object_unique_ptr.hpp  optional_dim.hpp  optional_dim_fwd.hpp  optional_object_unique_ptr.hpp  optional_object_unique_ptr_fwd.hpp  optional_pos.hpp  optional_pos_fwd.hpp  parameters.hpp  parameters_fwd.hpp  pos.hpp  pos_fwd.hpp  reference.hpp  size.hpp  unit.hpp
src/: create_log.cpp  exception.cpp  log.cpp  log_location.cpp  show_error.cpp  show_error_narrow.cpp  show_message.cpp  show_message_narrow.cpp
src/backends/posix/: create_processor.cpp  event.cpp  extract_event.cpp  match.cpp  posted.cpp  processor.cpp  processor_base.cpp  timer.cpp
src/backends/sdl/: exception.cpp  get_error.cpp
src/backends/wayland/: compositor.cpp  display.cpp  display_comparison.cpp  display_dispatch_pending.cpp  display_fd.cpp  display_flush.cpp  display_prepare_read.cpp  display_read_events.cpp  display_roundtrip.cpp  original_display.cpp  registry.cpp  seat.cpp  seat_set.cpp  shell.cpp  shm.cpp  surface.cpp
src/backends/windows/: clear_last_error.cpp  command_line_argv.cpp  command_line_to_argv.cpp  counted_wndclass.cpp  default_wnd_proc.cpp  get_command_line.cpp  get_focus.cpp  has_last_error.cpp  local_free.cpp  message.cpp  message_box.cpp  message_box_narrow.cpp  module_handle.cpp  peek_message.cpp  post_message.cpp  system_metrics.cpp  wndclass.cpp
src/backends/x11/: colormap.cpp  default_screen.cpp  display.cpp  display_fd.cpp  flush.cpp  free.cpp  get_input_focus.cpp  intern_atom.cpp  log.cpp  log_location.cpp  original_display.cpp  pending.cpp  sync.cpp  to_x11_bool.cpp
src/cursor/: create_invisible.cpp  create_predefined.cpp  object.cpp
src/event/: base.cpp  concrete_connection.cpp  connection.cpp  create_processor.cpp  make_connection.cpp
src/impl/src/: create_log.cpp  log.cpp  log_name.cpp
src/main/: create_output.cpp  dummy_output.cpp  exit_failure.cpp  exit_success.cpp  function_context.cpp  loop.cpp  loop_next.cpp  loop_poll.cpp  output.cpp  scoped_output.cpp
src/system/: create.cpp  object.cpp
src/system/event/: base.cpp  create_processor.cpp  processor.cpp  quit.cpp
src/timer/: event.cpp  match.cpp  object.cpp  setting.cpp  setting_no_delay.cpp  setting_no_period.cpp
src/visual/: object.cpp
src/window/: has_focus.cpp  object.cpp  parameters.cpp
src/window/event/: base.cpp  close.cpp  create_processor.cpp  destroy.cpp  hide.cpp  processor.cpp  resize.cpp  show.cpp
test/: CMakeLists.txt
test/stream/: lazy_function.cpp  object.cpp
util/: check_includes.sh  prettify_includes.sh  update_cmake.sh
(+1067 files in other folders)
