cmake_minimum_required(
	VERSION
	2.8.12
)

project(
	awl
)

set(
	CMAKE_MODULE_PATH
	"${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}"
)

include(
	FcpptCMakeUtils
)

include(
	FcpptSymbol
)

fcppt_utils_handle_so_version(
	AWL_SO_VERSION
	AWL_USED_SO_VERSION
	"0.1"
)

include_directories(
	${FCPPT_UTILS_PROJECT_SOURCE_DIR}/include
)

# Boost begin
find_package(
	Boost 1.47.0 REQUIRED
	system
)

include_directories(
	${FCPPT_UTILS_INCLUDE_SYSTEM}
	${Boost_INCLUDE_DIRS}
)

link_directories(
	${Boost_LIBRARY_DIRS}
)

# Boost end

# Fcppt begin
find_package(
	fcppt
	REQUIRED
)
# Fcppt end

# Source groups end

set(
	AWL_BASE_SRC_FILES
	src/create_log.cpp
	src/cursor/object.cpp
	src/exception.cpp
	src/log.cpp
	src/log_context.cpp
	src/log_location.cpp
	src/main/create_output.cpp
	src/main/dummy_output.cpp
	src/main/exit_failure.cpp
	src/main/exit_success.cpp
	src/main/function_context.cpp
	src/main/loop.cpp
	src/main/loop_next.cpp
	src/main/loop_poll.cpp
	src/main/output.cpp
	src/main/scoped_output.cpp
	src/show_error.cpp
	src/show_error_narrow.cpp
	src/show_message.cpp
	src/show_message_narrow.cpp
	src/system/create.cpp
	src/system/event/processor.cpp
	src/system/object.cpp
	src/visual/object.cpp
	src/window/event/processor.cpp
	src/window/event/resize.cpp
	src/window/object.cpp
	src/window/parameters.cpp
)

set(
	AWL_BASE_INCLUDE_FILES
	include/awl/class_symbol.hpp
	include/awl/create_log.hpp
	include/awl/cursor/const_optional_object_ref.hpp
	include/awl/cursor/const_optional_object_ref_fwd.hpp
	include/awl/cursor/hotspot.hpp
	include/awl/cursor/hotspot_fwd.hpp
	include/awl/cursor/object.hpp
	include/awl/cursor/object_fwd.hpp
	include/awl/cursor/object_unique_ptr.hpp
	include/awl/cursor/size.hpp
	include/awl/cursor/type.hpp
	include/awl/cursor/type_fwd.hpp
	include/awl/exception.hpp
	include/awl/log.hpp
	include/awl/log_context.hpp
	include/awl/log_location.hpp
	include/awl/main/create_output.hpp
	include/awl/main/dummy_output.hpp
	include/awl/main/exit_code.hpp
	include/awl/main/exit_code_fwd.hpp
	include/awl/main/exit_failure.hpp
	include/awl/main/exit_success.hpp
	include/awl/main/function_context.hpp
	include/awl/main/function_context_fwd.hpp
	include/awl/main/loop.hpp
	include/awl/main/loop_callback.hpp
	include/awl/main/loop_next.hpp
	include/awl/main/loop_poll.hpp
	include/awl/main/loop_process_callback.hpp
	include/awl/main/optional_exit_code.hpp
	include/awl/main/optional_exit_code_fwd.hpp
	include/awl/main/optional_scoped_output_unique_ptr.hpp
	include/awl/main/optional_scoped_output_unique_ptr_fwd.hpp
	include/awl/main/output.hpp
	include/awl/main/output_fwd.hpp
	include/awl/main/output_unique_ptr.hpp
	include/awl/main/scoped_output.hpp
	include/awl/main/scoped_output_fwd.hpp
	include/awl/main/scoped_output_unique_ptr.hpp
	include/awl/show_error.hpp
	include/awl/show_error_narrow.hpp
	include/awl/show_message.hpp
	include/awl/show_message_narrow.hpp
	include/awl/system/create.hpp
	include/awl/system/event/processor.hpp
	include/awl/system/event/processor_fwd.hpp
	include/awl/system/object.hpp
	include/awl/system/object_fwd.hpp
	include/awl/system/object_unique_ptr.hpp
	include/awl/visual/object.hpp
	include/awl/visual/object_fwd.hpp
	include/awl/visual/object_unique_ptr.hpp
	include/awl/window/dim.hpp
	include/awl/window/dim_fwd.hpp
	include/awl/window/event/close.hpp
	include/awl/window/event/close_callback.hpp
	include/awl/window/event/close_function.hpp
	include/awl/window/event/close_fwd.hpp
	include/awl/window/event/close_signal.hpp
	include/awl/window/event/destroy.hpp
	include/awl/window/event/destroy_callback.hpp
	include/awl/window/event/destroy_function.hpp
	include/awl/window/event/destroy_fwd.hpp
	include/awl/window/event/destroy_signal.hpp
	include/awl/window/event/hide.hpp
	include/awl/window/event/hide_callback.hpp
	include/awl/window/event/hide_function.hpp
	include/awl/window/event/hide_fwd.hpp
	include/awl/window/event/hide_signal.hpp
	include/awl/window/event/processor.hpp
	include/awl/window/event/processor_fwd.hpp
	include/awl/window/event/resize.hpp
	include/awl/window/event/resize_callback.hpp
	include/awl/window/event/resize_function.hpp
	include/awl/window/event/resize_fwd.hpp
	include/awl/window/event/resize_signal.hpp
	include/awl/window/event/show.hpp
	include/awl/window/event/show_callback.hpp
	include/awl/window/event/show_function.hpp
	include/awl/window/event/show_fwd.hpp
	include/awl/window/event/show_signal.hpp
	include/awl/window/object.hpp
	include/awl/window/object_fwd.hpp
	include/awl/window/object_unique_ptr.hpp
	include/awl/window/optional_dim.hpp
	include/awl/window/optional_dim_fwd.hpp
	include/awl/window/parameters.hpp
	include/awl/window/parameters_fwd.hpp
	include/awl/window/size.hpp
	include/awl/window/unit.hpp
)

if(
	WIN32
)
	set(
		AWL_WINDOWS_BACKEND
		TRUE
	)
elseif(
	UNIX
)
	find_package(
		X11
	)

	option(
		ENABLE_X11
		"Build the X11 backend"
		${X11_FOUND}
	)

	if(
		ENABLE_X11
	)
		set(
			AWL_X11_BACKEND
			TRUE
		)
	endif()

	find_package(
		Wayland
	)

	option(
		ENABLE_WAYLAND
		"Build the wayland backend"
		${WAYLAND_FOUND}
	)

	if(
		ENABLE_WAYLAND
	)
		set(
			AWL_WAYLAND_BACKEND
			TRUE
		)
	endif()
else()
	message(
		FATAL_ERROR
		"This configuration is not supported!"
	)
endif()

if(
	${CMAKE_SYSTEM_NAME} STREQUAL "Linux"
)
	set(
		AWL_LINUX_BACKEND
		TRUE
	)
endif()

configure_file(
	${FCPPT_UTILS_PROJECT_SOURCE_DIR}/config.hpp.in
	${FCPPT_UTILS_PROJECT_BINARY_DIR}/include/awl/config.hpp
)

set(
	AWL_STATIC_LINK_FLAG
	AWL_STATIC_LINK
)

fcppt_generate_symbol_header(
	STATIC_LINK_FLAG
		${AWL_STATIC_LINK_FLAG}
	EXPORTS_NAME
		awl
	SYMBOL_NAME
		AWL_DETAIL
)

include_directories(
	${FCPPT_UTILS_PROJECT_BINARY_DIR}/include
)

set(
	AWL_X11_SRC_FILES
	src/backends/x11/colormap.cpp
	src/backends/x11/cursor/convert_predefined.cpp
	src/backends/x11/cursor/create_invisible.cpp
	src/backends/x11/cursor/create_pixmap.cpp
	src/backends/x11/cursor/create_predefined.cpp
	src/backends/x11/cursor/holder.cpp
	src/backends/x11/cursor/load_font.cpp
	src/backends/x11/cursor/object.cpp
	src/backends/x11/default_screen.cpp
	src/backends/x11/display.cpp
	src/backends/x11/display_fd.cpp
	src/backends/x11/flush.cpp
	src/backends/x11/free.cpp
	src/backends/x11/intern_atom.cpp
	src/backends/x11/log.cpp
	src/backends/x11/original_display.cpp
	src/backends/x11/pending.cpp
	src/backends/x11/pixmap/create_from_data.cpp
	src/backends/x11/pixmap/holder.cpp
	src/backends/x11/sync.cpp
	src/backends/x11/system/event/generic.cpp
	src/backends/x11/system/event/map_key.cpp
	src/backends/x11/system/event/next.cpp
	src/backends/x11/system/event/object.cpp
	src/backends/x11/system/event/original_processor.cpp
	src/backends/x11/system/event/pending.cpp
	src/backends/x11/system/event/processor.cpp
	src/backends/x11/system/object.cpp
	src/backends/x11/system/original_object.cpp
	src/backends/x11/to_x11_bool.cpp
	src/backends/x11/visual/copy_from_parent.cpp
	src/backends/x11/visual/create_info.cpp
	src/backends/x11/visual/default.cpp
	src/backends/x11/visual/get_info.cpp
	src/backends/x11/visual/object.cpp
	src/backends/x11/visual/wrapped.cpp
	src/backends/x11/window/atoms.cpp
	src/backends/x11/window/attributes.cpp
	src/backends/x11/window/class_hint.cpp
	src/backends/x11/window/create.cpp
	src/backends/x11/window/event/change_mask.cpp
	src/backends/x11/window/event/filter.cpp
	src/backends/x11/window/event/object.cpp
	src/backends/x11/window/event/original_processor.cpp
	src/backends/x11/window/event/processor.cpp
	src/backends/x11/window/event/scoped_processor.cpp
	src/backends/x11/window/event/send.cpp
	src/backends/x11/window/event/to_mask.cpp
	src/backends/x11/window/event/wm_protocols.cpp
	src/backends/x11/window/get_class_hint.cpp
	src/backends/x11/window/get_geometry.cpp
	src/backends/x11/window/hints.cpp
	src/backends/x11/window/holder.cpp
	src/backends/x11/window/object.cpp
	src/backends/x11/window/original_class_hint.cpp
	src/backends/x11/window/original_object.cpp
	src/backends/x11/window/root.cpp
	src/backends/x11/window/set_wm_protocols.cpp
	src/backends/x11/window/visual.cpp
	src/backends/x11/window/wrapped_object.cpp
)

set(
	AWL_X11_INCLUDE_FILES
	include/awl/backends/x11/atom.hpp
	include/awl/backends/x11/colormap.hpp
	include/awl/backends/x11/colormap_fwd.hpp
	include/awl/backends/x11/cursor/background_color.hpp
	include/awl/backends/x11/cursor/const_optional_object_ref.hpp
	include/awl/backends/x11/cursor/const_optional_object_ref_fwd.hpp
	include/awl/backends/x11/cursor/convert_predefined.hpp
	include/awl/backends/x11/cursor/create_invisible.hpp
	include/awl/backends/x11/cursor/create_pixmap.hpp
	include/awl/backends/x11/cursor/create_predefined.hpp
	include/awl/backends/x11/cursor/dest_pixmap.hpp
	include/awl/backends/x11/cursor/foreground_color.hpp
	include/awl/backends/x11/cursor/holder.hpp
	include/awl/backends/x11/cursor/holder_fwd.hpp
	include/awl/backends/x11/cursor/holder_unique_ptr.hpp
	include/awl/backends/x11/cursor/load_font.hpp
	include/awl/backends/x11/cursor/object.hpp
	include/awl/backends/x11/cursor/object_fwd.hpp
	include/awl/backends/x11/cursor/object_unique_ptr.hpp
	include/awl/backends/x11/cursor/shape.hpp
	include/awl/backends/x11/cursor/source_pixmap.hpp
	include/awl/backends/x11/default_screen.hpp
	include/awl/backends/x11/deleter.hpp
	include/awl/backends/x11/discard.hpp
	include/awl/backends/x11/display.hpp
	include/awl/backends/x11/display_fd.hpp
	include/awl/backends/x11/display_fwd.hpp
	include/awl/backends/x11/flush.hpp
	include/awl/backends/x11/free.hpp
	include/awl/backends/x11/intern_atom.hpp
	include/awl/backends/x11/log.hpp
	include/awl/backends/x11/original_display.hpp
	include/awl/backends/x11/pending.hpp
	include/awl/backends/x11/pixmap/const_holder_ref.hpp
	include/awl/backends/x11/pixmap/create_from_data.hpp
	include/awl/backends/x11/pixmap/dim.hpp
	include/awl/backends/x11/pixmap/dim_fwd.hpp
	include/awl/backends/x11/pixmap/holder.hpp
	include/awl/backends/x11/pixmap/holder_fwd.hpp
	include/awl/backends/x11/pixmap/holder_unique_ptr.hpp
	include/awl/backends/x11/pixmap/size.hpp
	include/awl/backends/x11/screen.hpp
	include/awl/backends/x11/sync.hpp
	include/awl/backends/x11/system/event/callback.hpp
	include/awl/backends/x11/system/event/function.hpp
	include/awl/backends/x11/system/event/generic.hpp
	include/awl/backends/x11/system/event/generic_fwd.hpp
	include/awl/backends/x11/system/event/map_key.hpp
	include/awl/backends/x11/system/event/next.hpp
	include/awl/backends/x11/system/event/object.hpp
	include/awl/backends/x11/system/event/object_fwd.hpp
	include/awl/backends/x11/system/event/opcode.hpp
	include/awl/backends/x11/system/event/original_processor.hpp
	include/awl/backends/x11/system/event/original_processor_fwd.hpp
	include/awl/backends/x11/system/event/pending.hpp
	include/awl/backends/x11/system/event/processor.hpp
	include/awl/backends/x11/system/event/processor_fwd.hpp
	include/awl/backends/x11/system/event/type.hpp
	include/awl/backends/x11/system/object.hpp
	include/awl/backends/x11/system/object_fwd.hpp
	include/awl/backends/x11/system/original_object.hpp
	include/awl/backends/x11/to_x11_bool.hpp
	include/awl/backends/x11/visual/copy_from_parent.hpp
	include/awl/backends/x11/visual/create_info.hpp
	include/awl/backends/x11/visual/default.hpp
	include/awl/backends/x11/visual/get_info.hpp
	include/awl/backends/x11/visual/info_unique_ptr.hpp
	include/awl/backends/x11/visual/object.hpp
	include/awl/backends/x11/visual/object_fwd.hpp
	include/awl/backends/x11/visual/object_unique_ptr.hpp
	include/awl/backends/x11/visual/wrapped.hpp
	include/awl/backends/x11/window/atom_count.hpp
	include/awl/backends/x11/window/atoms.hpp
	include/awl/backends/x11/window/atoms_fwd.hpp
	include/awl/backends/x11/window/attributes.hpp
	include/awl/backends/x11/window/change_wm_protocols.hpp
	include/awl/backends/x11/window/class_hint.hpp
	include/awl/backends/x11/window/class_hint_fwd.hpp
	include/awl/backends/x11/window/const_optional_class_hint_ref.hpp
	include/awl/backends/x11/window/const_optional_class_hint_ref_fwd.hpp
	include/awl/backends/x11/window/create.hpp
	include/awl/backends/x11/window/event/atom_vector.hpp
	include/awl/backends/x11/window/event/atom_vector_fwd.hpp
	include/awl/backends/x11/window/event/callback.hpp
	include/awl/backends/x11/window/event/change_mask.hpp
	include/awl/backends/x11/window/event/filter.hpp
	include/awl/backends/x11/window/event/function.hpp
	include/awl/backends/x11/window/event/mask.hpp
	include/awl/backends/x11/window/event/object.hpp
	include/awl/backends/x11/window/event/object_fwd.hpp
	include/awl/backends/x11/window/event/optional_mask.hpp
	include/awl/backends/x11/window/event/original_processor.hpp
	include/awl/backends/x11/window/event/processor.hpp
	include/awl/backends/x11/window/event/processor_fwd.hpp
	include/awl/backends/x11/window/event/processor_unique_ptr.hpp
	include/awl/backends/x11/window/event/scoped_processor.hpp
	include/awl/backends/x11/window/event/send.hpp
	include/awl/backends/x11/window/event/to_mask.hpp
	include/awl/backends/x11/window/event/type.hpp
	include/awl/backends/x11/window/event/wm_protocols.hpp
	include/awl/backends/x11/window/get_class_hint.hpp
	include/awl/backends/x11/window/get_geometry.hpp
	include/awl/backends/x11/window/hints.hpp
	include/awl/backends/x11/window/holder.hpp
	include/awl/backends/x11/window/object.hpp
	include/awl/backends/x11/window/object_fwd.hpp
	include/awl/backends/x11/window/object_unique_ptr.hpp
	include/awl/backends/x11/window/optional_class_hint.hpp
	include/awl/backends/x11/window/optional_class_hint_fwd.hpp
	include/awl/backends/x11/window/optional_object_unique_ptr.hpp
	include/awl/backends/x11/window/optional_object_unique_ptr_fwd.hpp
	include/awl/backends/x11/window/original_class_hint.hpp
	include/awl/backends/x11/window/original_object.hpp
	include/awl/backends/x11/window/original_object_fwd.hpp
	include/awl/backends/x11/window/rect.hpp
	include/awl/backends/x11/window/rect_fwd.hpp
	include/awl/backends/x11/window/root.hpp
	include/awl/backends/x11/window/set_wm_protocols.hpp
	include/awl/backends/x11/window/visual.hpp
	include/awl/backends/x11/window/wrapped_object.hpp
)

set(
	AWL_WAYLAND_INCLUDE_FILES
	include/awl/backends/wayland/compositor.hpp
	include/awl/backends/wayland/compositor_fwd.hpp
	include/awl/backends/wayland/cursor/convert_name.hpp
	include/awl/backends/wayland/cursor/create_invisible.hpp
	include/awl/backends/wayland/cursor/create_name.hpp
	include/awl/backends/wayland/cursor/name.hpp
	include/awl/backends/wayland/cursor/name_fwd.hpp
	include/awl/backends/wayland/cursor/object.hpp
	include/awl/backends/wayland/cursor/object_fwd.hpp
	include/awl/backends/wayland/cursor/object_unique_ptr.hpp
	include/awl/backends/wayland/cursor/optional_name.hpp
	include/awl/backends/wayland/cursor/optional_name_fwd.hpp
	include/awl/backends/wayland/cursor/predefined.hpp
	include/awl/backends/wayland/cursor/theme.hpp
	include/awl/backends/wayland/cursor/theme_fwd.hpp
	include/awl/backends/wayland/display.hpp
	include/awl/backends/wayland/display_dispatch_pending.hpp
	include/awl/backends/wayland/display_flush.hpp
	include/awl/backends/wayland/display_fwd.hpp
	include/awl/backends/wayland/display_prepare_read.hpp
	include/awl/backends/wayland/display_read_events.hpp
	include/awl/backends/wayland/display_roundtrip.hpp
	include/awl/backends/wayland/make_registry_object.hpp
	include/awl/backends/wayland/make_registry_object_impl.hpp
	include/awl/backends/wayland/optional_compositor.hpp
	include/awl/backends/wayland/optional_compositor_fwd.hpp
	include/awl/backends/wayland/optional_shell.hpp
	include/awl/backends/wayland/optional_shell_fwd.hpp
	include/awl/backends/wayland/optional_shm.hpp
	include/awl/backends/wayland/optional_shm_fwd.hpp
	include/awl/backends/wayland/original_display.hpp
	include/awl/backends/wayland/registry.hpp
	include/awl/backends/wayland/registry_fwd.hpp
	include/awl/backends/wayland/registry_id.hpp
	include/awl/backends/wayland/registry_object_decl.hpp
	include/awl/backends/wayland/registry_object_fwd.hpp
	include/awl/backends/wayland/registry_object_impl.hpp
	include/awl/backends/wayland/shell.hpp
	include/awl/backends/wayland/shell_fwd.hpp
	include/awl/backends/wayland/shm.hpp
	include/awl/backends/wayland/shm_fwd.hpp
	include/awl/backends/wayland/surface.hpp
	include/awl/backends/wayland/surface_fwd.hpp
	include/awl/backends/wayland/system/event/global_data.hpp
	include/awl/backends/wayland/system/event/global_data_fwd.hpp
	include/awl/backends/wayland/system/event/original_processor.hpp
	include/awl/backends/wayland/system/event/processor.hpp
	include/awl/backends/wayland/system/event/processor_fwd.hpp
	include/awl/backends/wayland/system/event/processor_unique_ptr.hpp
	include/awl/backends/wayland/system/object.hpp
	include/awl/backends/wayland/system/object_fwd.hpp
	include/awl/backends/wayland/system/original_object.hpp
	include/awl/backends/wayland/visual/null_object.hpp
	include/awl/backends/wayland/visual/object.hpp
	include/awl/backends/wayland/window/event/data.hpp
	include/awl/backends/wayland/window/event/data_fwd.hpp
	include/awl/backends/wayland/window/event/original_processor.hpp
	include/awl/backends/wayland/window/event/processor.hpp
	include/awl/backends/wayland/window/event/processor_fwd.hpp
	include/awl/backends/wayland/window/object.hpp
	include/awl/backends/wayland/window/object_fwd.hpp
	include/awl/backends/wayland/window/original_object.hpp
	include/awl/backends/wayland/window/shell_surface.hpp
	include/awl/backends/wayland/window/shell_surface_fwd.hpp
)

set(
	AWL_WAYLAND_SRC_FILES
	src/backends/wayland/compositor.cpp
	src/backends/wayland/cursor/convert_name.cpp
	src/backends/wayland/cursor/create_invisible.cpp
	src/backends/wayland/cursor/create_name.cpp
	src/backends/wayland/cursor/object.cpp
	src/backends/wayland/cursor/predefined.cpp
	src/backends/wayland/cursor/theme.cpp
	src/backends/wayland/display.cpp
	src/backends/wayland/display_dispatch_pending.cpp
	src/backends/wayland/display_flush.cpp
	src/backends/wayland/display_prepare_read.cpp
	src/backends/wayland/display_read_events.cpp
	src/backends/wayland/display_roundtrip.cpp
	src/backends/wayland/original_display.cpp
	src/backends/wayland/registry.cpp
	src/backends/wayland/shell.cpp
	src/backends/wayland/shm.cpp
	src/backends/wayland/surface.cpp
	src/backends/wayland/system/event/global_data.cpp
	src/backends/wayland/system/event/original_processor.cpp
	src/backends/wayland/system/event/processor.cpp
	src/backends/wayland/system/object.cpp
	src/backends/wayland/system/original_object.cpp
	src/backends/wayland/visual/null_object.cpp
	src/backends/wayland/visual/object.cpp
	src/backends/wayland/window/event/data.cpp
	src/backends/wayland/window/event/original_processor.cpp
	src/backends/wayland/window/event/processor.cpp
	src/backends/wayland/window/object.cpp
	src/backends/wayland/window/original_object.cpp
	src/backends/wayland/window/shell_surface.cpp
)

set(
	AWL_LINUX_INCLUDE_FILES
	include/awl/backends/linux/fd/callback.hpp
	include/awl/backends/linux/fd/duration.hpp
	include/awl/backends/linux/fd/epoll/ctl.hpp
	include/awl/backends/linux/fd/epoll/fd.hpp
	include/awl/backends/linux/fd/epoll/fd_fwd.hpp
	include/awl/backends/linux/fd/epoll/set.hpp
	include/awl/backends/linux/fd/epoll/set_fwd.hpp
	include/awl/backends/linux/fd/event.hpp
	include/awl/backends/linux/fd/event_fwd.hpp
	include/awl/backends/linux/fd/function.hpp
	include/awl/backends/linux/fd/object.hpp
	include/awl/backends/linux/fd/object_vector.hpp
	include/awl/backends/linux/fd/optional_duration.hpp
	include/awl/backends/linux/fd/optional_duration_fwd.hpp
	include/awl/backends/linux/fd/original_processor.hpp
	include/awl/backends/linux/fd/processor.hpp
	include/awl/backends/linux/fd/processor_fwd.hpp
)

set(
	AWL_LINUX_SRC_FILES
	src/backends/linux/fd/epoll/ctl.cpp
	src/backends/linux/fd/epoll/fd.cpp
	src/backends/linux/fd/epoll/set.cpp
	src/backends/linux/fd/original_processor.cpp
	src/backends/linux/fd/processor.cpp
)

set(
	AWL_WINDOWS_SRC_FILES
	src/backends/windows/counted_wndclass.cpp
	src/backends/windows/cursor/convert_predefined.cpp
	src/backends/windows/cursor/create_invisible.cpp
	src/backends/windows/cursor/create_predefined.cpp
	src/backends/windows/cursor/created.cpp
	src/backends/windows/cursor/load.cpp
	src/backends/windows/cursor/object.cpp
	src/backends/windows/cursor/shared.cpp
	src/backends/windows/default_wnd_proc.cpp
	src/backends/windows/format_message.cpp
	src/backends/windows/get_focus.cpp
	src/backends/windows/local_free.cpp
	src/backends/windows/main/output.cpp
	src/backends/windows/message.cpp
	src/backends/windows/message_box.cpp
	src/backends/windows/message_box_narrow.cpp
	src/backends/windows/module_handle.cpp
	src/backends/windows/peek_message.cpp
	src/backends/windows/post_message.cpp
	src/backends/windows/scoped_local_memory.cpp
	src/backends/windows/system/event/handle.cpp
	src/backends/windows/system/event/object.cpp
	src/backends/windows/system/event/original_handle.cpp
	src/backends/windows/system/event/original_processor.cpp
	src/backends/windows/system/event/processor.cpp
	src/backends/windows/system/object.cpp
	src/backends/windows/system/original_object.cpp
	src/backends/windows/system_metrics.cpp
	src/backends/windows/visual/null_object.cpp
	src/backends/windows/visual/object.cpp
	src/backends/windows/window/adjusted_size.cpp
	src/backends/windows/window/client_to_screen.cpp
	src/backends/windows/window/create.cpp
	src/backends/windows/window/event/combine_result.cpp
	src/backends/windows/window/event/object.cpp
	src/backends/windows/window/event/original_processor.cpp
	src/backends/windows/window/event/processor.cpp
	src/backends/windows/window/event/scoped_processor.cpp
	src/backends/windows/window/event/scoped_user_message.cpp
	src/backends/windows/window/event/wnd_proc.cpp
	src/backends/windows/window/get_client_rect.cpp
	src/backends/windows/window/get_rect.cpp
	src/backends/windows/window/has_focus.cpp
	src/backends/windows/window/holder.cpp
	src/backends/windows/window/object.cpp
	src/backends/windows/window/original_object.cpp
	src/backends/windows/window/screen_to_client.cpp
	src/backends/windows/wndclass.cpp
)

set(
	AWL_WINDOWS_INCLUDE_FILES
	include/awl/backends/windows/counted_wndclass.hpp
	include/awl/backends/windows/counted_wndclass_fwd.hpp
	include/awl/backends/windows/cursor/and_plane.hpp
	include/awl/backends/windows/cursor/const_optional_object_ref.hpp
	include/awl/backends/windows/cursor/const_optional_object_ref_fwd.hpp
	include/awl/backends/windows/cursor/convert_predefined.hpp
	include/awl/backends/windows/cursor/create_invisible.hpp
	include/awl/backends/windows/cursor/create_predefined.hpp
	include/awl/backends/windows/cursor/created.hpp
	include/awl/backends/windows/cursor/created_fwd.hpp
	include/awl/backends/windows/cursor/dim.hpp
	include/awl/backends/windows/cursor/dim_fwd.hpp
	include/awl/backends/windows/cursor/load.hpp
	include/awl/backends/windows/cursor/object.hpp
	include/awl/backends/windows/cursor/object_fwd.hpp
	include/awl/backends/windows/cursor/object_unique_ptr.hpp
	include/awl/backends/windows/cursor/shared.hpp
	include/awl/backends/windows/cursor/shared_fwd.hpp
	include/awl/backends/windows/cursor/size.hpp
	include/awl/backends/windows/cursor/xor_plane.hpp
	include/awl/backends/windows/default_wnd_proc.hpp
	include/awl/backends/windows/format_message.hpp
	include/awl/backends/windows/get_focus.hpp
	include/awl/backends/windows/local_free.hpp
	include/awl/backends/windows/lparam.hpp
	include/awl/backends/windows/main/output.hpp
	include/awl/backends/windows/message.hpp
	include/awl/backends/windows/message_box.hpp
	include/awl/backends/windows/message_box_narrow.hpp
	include/awl/backends/windows/message_fwd.hpp
	include/awl/backends/windows/message_type.hpp
	include/awl/backends/windows/module_handle.hpp
	include/awl/backends/windows/optional_message.hpp
	include/awl/backends/windows/optional_message_fwd.hpp
	include/awl/backends/windows/optional_point.hpp
	include/awl/backends/windows/optional_point_fwd.hpp
	include/awl/backends/windows/optional_rect.hpp
	include/awl/backends/windows/optional_rect_fwd.hpp
	include/awl/backends/windows/peek_message.hpp
	include/awl/backends/windows/post_message.hpp
	include/awl/backends/windows/scoped_local_memory.hpp
	include/awl/backends/windows/system/event/callback.hpp
	include/awl/backends/windows/system/event/function.hpp
	include/awl/backends/windows/system/event/handle.hpp
	include/awl/backends/windows/system/event/handle_callback.hpp
	include/awl/backends/windows/system/event/handle_destroy_callback.hpp
	include/awl/backends/windows/system/event/handle_function.hpp
	include/awl/backends/windows/system/event/handle_fwd.hpp
	include/awl/backends/windows/system/event/handle_unique_ptr.hpp
	include/awl/backends/windows/system/event/object.hpp
	include/awl/backends/windows/system/event/object_fwd.hpp
	include/awl/backends/windows/system/event/optional_processor_ref.hpp
	include/awl/backends/windows/system/event/optional_processor_ref_fwd.hpp
	include/awl/backends/windows/system/event/original_handle.hpp
	include/awl/backends/windows/system/event/original_processor.hpp
	include/awl/backends/windows/system/event/original_processor_fwd.hpp
	include/awl/backends/windows/system/event/processor.hpp
	include/awl/backends/windows/system/event/processor_fwd.hpp
	include/awl/backends/windows/system/object.hpp
	include/awl/backends/windows/system/object_fwd.hpp
	include/awl/backends/windows/system/original_object.hpp
	include/awl/backends/windows/system_metrics.hpp
	include/awl/backends/windows/visual/null_object.hpp
	include/awl/backends/windows/visual/object.hpp
	include/awl/backends/windows/visual/object_fwd.hpp
	include/awl/backends/windows/visual/object_unique_ptr.hpp
	include/awl/backends/windows/window/adjusted_size.hpp
	include/awl/backends/windows/window/client_to_screen.hpp
	include/awl/backends/windows/window/const_optional_object_ref.hpp
	include/awl/backends/windows/window/const_optional_object_ref_fwd.hpp
	include/awl/backends/windows/window/create.hpp
	include/awl/backends/windows/window/event/callback.hpp
	include/awl/backends/windows/window/event/combine_result.hpp
	include/awl/backends/windows/window/event/function.hpp
	include/awl/backends/windows/window/event/object.hpp
	include/awl/backends/windows/window/event/object_fwd.hpp
	include/awl/backends/windows/window/event/original_processor.hpp
	include/awl/backends/windows/window/event/processor.hpp
	include/awl/backends/windows/window/event/processor_fwd.hpp
	include/awl/backends/windows/window/event/processor_unique_ptr.hpp
	include/awl/backends/windows/window/event/return_type.hpp
	include/awl/backends/windows/window/event/return_type_fwd.hpp
	include/awl/backends/windows/window/event/scoped_processor.hpp
	include/awl/backends/windows/window/event/scoped_user_message.hpp
	include/awl/backends/windows/window/event/scoped_user_message_fwd.hpp
	include/awl/backends/windows/window/event/unregister_callback.hpp
	include/awl/backends/windows/window/event/wnd_proc.hpp
	include/awl/backends/windows/window/get_client_rect.hpp
	include/awl/backends/windows/window/get_rect.hpp
	include/awl/backends/windows/window/has_focus.hpp
	include/awl/backends/windows/window/holder.hpp
	include/awl/backends/windows/window/object.hpp
	include/awl/backends/windows/window/object_fwd.hpp
	include/awl/backends/windows/window/object_unique_ptr.hpp
	include/awl/backends/windows/window/optional_object_unique_ptr.hpp
	include/awl/backends/windows/window/optional_object_unique_ptr_fwd.hpp
	include/awl/backends/windows/window/original_object.hpp
	include/awl/backends/windows/window/screen_to_client.hpp
	include/awl/backends/windows/window/signed_dim.hpp
	include/awl/backends/windows/window/signed_dim_fwd.hpp
	include/awl/backends/windows/windows.hpp
	include/awl/backends/windows/wndclass.hpp
	include/awl/backends/windows/wndclass_fwd.hpp
	include/awl/backends/windows/wndclass_remove_callback.hpp
	include/awl/backends/windows/wparam.hpp
)

set(
	AWL_INCLUDE_FILES
	"${AWL_BASE_INCLUDE_FILES}"
)

set(
	AWL_SRC_FILES
	"${AWL_BASE_SRC_FILES}"
)

if(
	AWL_X11_BACKEND
)
	list(
		APPEND
		AWL_INCLUDE_FILES
		${AWL_X11_INCLUDE_FILES}
	)

	list(
		APPEND
		AWL_SRC_FILES
		${AWL_X11_SRC_FILES}
	)
endif()

if(
	AWL_WAYLAND_BACKEND
)
	list(
		APPEND
		AWL_INCLUDE_FILES
		${AWL_WAYLAND_INCLUDE_FILES}
	)

	list(
		APPEND
		AWL_SRC_FILES
		${AWL_WAYLAND_SRC_FILES}
	)
endif()

if(
	AWL_LINUX_BACKEND
)
	list(
		APPEND
		AWL_INCLUDE_FILES
		${AWL_LINUX_INCLUDE_FILES}
	)

	list(
		APPEND
		AWL_SRC_FILES
		${AWL_LINUX_SRC_FILES}
	)
endif()

if(
	AWL_WINDOWS_BACKEND
)
	list(
		APPEND
		AWL_INCLUDE_FILES
		${AWL_WINDOWS_INCLUDE_FILES}
	)

	list(
		APPEND
		AWL_SRC_FILES
		${AWL_WINDOWS_SRC_FILES}
	)
endif()

list(
	APPEND
	AWL_FILES
	${AWL_SRC_FILES}
	${AWL_INCLUDE_FILES}
)

fcppt_utils_add_source_groups(
	"${AWL_FILES}"
)

fcppt_utils_static_shared()

fcppt_utils_link_target(
	awl
)

function(
	MAKE_AWL_LIBRARY
	TARGETNAME
	VARIANT
)
	add_library(
		${TARGETNAME}
		${VARIANT}
		${AWL_FILES}
	)

	fcppt_utils_set_so_version(
		${TARGETNAME}
		${AWL_USED_SO_VERSION}
	)

	fcppt_utils_set_target_compiler_flags(
		${TARGETNAME}
	)

	fcppt_utils_interface_static_link(
		${TARGETNAME}
		${VARIANT}
		${AWL_STATIC_LINK_FLAG}
	)

	target_include_directories(
		${TARGETNAME}
		INTERFACE
		${Boost_INCLUDE_DIRS}
		${fcppt_INCLUDE_DIRS}
	)

	fcppt_utils_add_target_include_dir(
		${TARGETNAME}
		TRUE
	)

	target_link_libraries(
		${TARGETNAME}
		PRIVATE
		${fcppt_core_TARGET}
		${fcppt_log_TARGET}
	)

	if(
		AWL_X11_BACKEND
	)
		target_include_directories(
			${TARGETNAME}
			PRIVATE
			${X11_INCLUDE_PATH}
		)

		target_link_libraries(
			${TARGETNAME}
			PRIVATE
			${X11_X11_LIB}
		)
	endif()

	if(
		AWL_WAYLAND_BACKEND
	)
		target_include_directories(
			${TARGETNAME}
			PRIVATE
			${WAYLAND_CLIENT_INCLUDE_DIRS}
			${WAYLAND_CURSOR_INCLUDE_DIRS}
		)

		target_link_libraries(
			${TARGETNAME}
			PRIVATE
			${WAYLAND_CLIENT_LIBRARIES}
			${WAYLAND_CURSOR_LIBRARIES}
		)
	endif()

	# TODO: Link to certain windows libs

	if(
		AWL_WINDOWS_BACKEND
	)
		target_compile_definitions(
			${TARGETNAME}
			PUBLIC
			UNICODE
			_UNICODE
		)

		target_link_libraries(
			${TARGETNAME}
			PRIVATE
			${fcppt_filesystem_TARGET}
		)
	endif()

	fcppt_utils_export_install_target(
		${TARGETNAME}
	)
endfunction()

if(
	ENABLE_STATIC
)
	fcppt_utils_static_link_name(
		awl
		STATIC_NAME
	)

	make_awl_library(
		${STATIC_NAME}
		STATIC
	)
endif()

if(
	ENABLE_SHARED
)
	make_awl_library(
		awl
		SHARED
	)
endif()

option(
	ENABLE_EXAMPLES
	"Build the examples"
	ON
)

if(
	ENABLE_EXAMPLES
)
	add_subdirectory(
		examples
	)
endif()

foreach(
	CUR_FILE
	${AWL_INCLUDE_FILES}
)
	# Cut the filename
	get_filename_component(
		REL_PATH
		${CUR_FILE}
		PATH
	)

	# Replace the leading include/
	string(
		REPLACE
		"include/"
		""
		TRIMMED_PATH
		"${REL_PATH}"
	)

	install(
		FILES
		${FCPPT_UTILS_PROJECT_SOURCE_DIR}/${CUR_FILE}
		DESTINATION
		${INSTALL_INCLUDE_DIR}/${TRIMMED_PATH}
	)
endforeach()

fcppt_utils_generate_config(
	TRUE
)

install(
	DIRECTORY
	${FCPPT_UTILS_PROJECT_BINARY_DIR}/include/
	DESTINATION
	${INSTALL_INCLUDE_DIR}
)

install(
	FILES
	${FCPPT_UTILS_PROJECT_SOURCE_DIR}/CMakeModules/AwlMainGenerator.cmake
	DESTINATION
	${INSTALL_CMAKEMODULES_DIR}
)
